--- a/status.html
+++ b/status.html
@@ -316,7 +316,7 @@ z-index: 3;
 
 
 <div style="font-family: Verdana; font-size:10px; overflow-y: hidden; position: absolute; width: 150px;height: 100px;overflow-x: hidden; padding-left: 165px; padding-top: 248px; z-index: 20;"><br><br>
-<img src="https://i.imgur.com/BMoFm81.gif">　<font color="#a59990" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 3px;">feeling : </font><font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 3px;">soft</font> <img src="https://i.imgur.com/8SYzw4z.gif">
+<img src="https://i.imgur.com/BMoFm81.gif">　<font color="#a59990" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 3px;">feeling : </font><font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 3px;">cozy</font> <img src="https://i.imgur.com/8SYzw4z.gif">
 <br><br><br>
 　　　　　<sub><img width="12px" height="auto" src="https://i.imgur.com/tJrZd34.gif"></sub>　<a href="https://photos.app.goo.gl/iLTeYQh8XpPmmA6Q2"target="_blank"><font color="#a59990" style="font-size:6px;">archive</font></a>　<sub><img width="12px" height="auto" src="https://i.imgur.com/tJrZd34.gif"></sub>
 </div>
@@ -326,6 +326,9 @@ z-index: 3;
 <div style="padding-left: 163px; padding-top: 130px;">
 <div style="padding: 2px; position: absolute; font-family: Verdana; font-size:10px; width: 270px; height: 120px; overflow-x: hidden; z-index: 30; text-align:justify; line-height: 100%">
 
+　<sub><img src="https://i.imgur.com/YQRQHJd.gif"></sub> <font color="#f2c6c6" style="border-bottom:1px dashed #d8c0ad;"><sup>27.05.19</sup></font> <font color="#d8abab">→</font>　sometimes existing is enough
+
+<br><br><br>
 　<sub><img src="https://i.imgur.com/pV6N95R.gif"></sub> <font color="#e0c5f1" style="border-bottom:1px dashed #d8c0ad;"><sup>05.05.19</sup></font> <font color="#bea5ce">→</font>　6 years of pure happiness ♡ !!
 
 <br><br><br>
@@ -351,9 +354,6 @@ z-index: 3;
 
 <br><br><br>
 　<sub><img src="https://i.imgur.com/9LP84Nr.gif"></sub> <font color="#b7cccc" style="border-bottom:1px dashed #d8c0ad;"><sup>12.06.18</sup></font> <font color="#9cb7b7">→</font>　i have a terrible fever ;///;
-
-<br><br><br>
-　<sub><img src="https://i.imgur.com/YQRQHJd.gif"></sub> <font color="#f2c6c6" style="border-bottom:1px dashed #d8c0ad;"><sup>11.22.18</sup></font> <font color="#d8abab">→</font>　aaaa i love hiiiim ; ;
 
 
 </div>
