--- a/fashion.html
+++ b/fashion.html
@@ -487,6 +487,10 @@ p { margin: 0; }
 <img width="200px" height="auto" src="https://i.imgur.com/ZfC1w51.jpg"/><br><br>
 <br>
 
+<br><br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/P7rqRld.jpg"/><br><br>
+<br>
+
 
 <br><br>
 
