--- a/blog.html
+++ b/blog.html
@@ -317,6 +317,71 @@ font-family: Verdana;
 </style>
 <div id="coisinhos">
 
+<center><img src="https://i.imgur.com/AUebzYL.gif"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>may . 30 . 2019</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiiii fluffies <img src="https://i.imgur.com/zbuThWK.gif"/><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i think i've started existing in a new reality..
+the reality where the smaller things give me energy for avoiding all bad things with a smile !!!
+if even a cry baby like me can feel that confident i'm sure you reading it can, too <img src="https://i.imgur.com/lwGS7G2.gif"/>
+
+i'm currently in a lazy social phase where i want to talk with people, make friends, share memories together.. ♡ !!
+and, well.. i'm being really slow with my projects, but i'm trying my best to keep doing my weekly tasks anyways <img src="https://i.imgur.com/PZ7uiy2.gif"/>
+but of course socializing can be very stressful for me and that's why these phases just happen on internet so i can keep myself safe and cautious !
+i'll share with you some things i've learned the past weeks :
+
+ⅰ.　everyone deserves a chance !! even the weirdest people can turn out to be really nice, so even if someone seem weird give them a chance and be friendly !
+ⅱ.　in the other hand, some people who seem to be super nice can be meanies in the end of the day.. so always keep an eye open and don't go trusting people too quickly...
+ⅲ.　manipulative people don't deserve your friendship, stay far away from people who make you feel bad for receiving attention !!!
+ⅳ.　don't keep hate in your heart, let it go and be happy ! but never forget that bad people are bad and shouldn't be trusted. it's not your responsability to make them improve and accept them in your life, keep away and just hope for their best.
+
+mm as i said, i haven't been very good in making things lately... but i did something cute !
+i colored and made some edits in this adorable drawing from paper doll mate :</pre><br>
+<br><br>
+
+<center><img width="400px" height="auto" src="https://i.imgur.com/3c6jJvT.jpg"/></center><br>
+
+</font></font></font>
+<br>
+
+<font size = 1><font color="#B1A69E">
+<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i'm very very proud and i think it would be such a cute wallpaper <img src="https://i.imgur.com/hBTS0bi.gif"/>
+
+i've been decorating my doll house, and it's becoming really cute.. ♡
+i will take pics once it's finished, but it will surely take a long while, many details ; ;
+
+so.. let's go for the q&a ! this one will be about something that always make me sad so i really feel the need to talk about !!</pre><br>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/d81T42M.gif"/></sub></sub>　<b>q & a</b>　<sub><sub><img src="https://i.imgur.com/gCof63R.gif"/></sub></sub></center>
+<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+recently people have come to consider the process of buying and selling pets something wrong and disrespectful to them, "do not buy a friend", "there are many animals for adoption" ... but what's the real point in that ?
+only dogs and cats can be found for adoption, and only a few specific breeds, which makes some people very angry with who prefers to buy dogs or cats of other specific breeds. "all races are valid and deserve love" .. this is true, but i can't see the point in always putting down people who wish to have a specific breed animal, it's not a matter of disliking the other breeds, just choosing one ! just like you choosed to have a bunny instead of a hamster, it doesn't mean you hate hamsters.. hmpf
+the reason these dogs and cats are on the streets and consequently placed for adoption is our fault, and i believe they are disrespected precisely because they are put up for adoption and not sold like any other breed. they are treated different !! people don't take care of them properly and don't care if they're having lots of babies out there.
+all pets are sold for a certain amount of money, not because they are objects but because they are difficult and expensive to maintain. someone had to take care of the mom who had that animal, who was cared for with affection ( and money ) to one day be put up for sale. if you don't have the money to buy a pet, you certainly do not have the money to care for one, right ?
+the dogs and cats on the street are exactly the ones that are put to adoption for free and easily abandoned because people do not value their lives. i don't think they should be treated differently from any other animal that is sold, they should be sold too and be cared of the same way.
+it is true that some animals are used for money and people abuse that, so it is important to be sure who you are buying the animal for and if the person really is trustworthy but many animals are sold for high value because they are rare breeds or very difficult to care for.
+so.. i don't see any problem in selling animals except when the person is bad and wants to make money from the lives of animals in a disrespectful way, and i believe that adoption is not a really good thing as it makes these animals even more devalued ;;
+the life of an animal is precious, and if you are not willing to pay for it you simply do not deserve to have a pet !!
+</pre>
+<br>
+i hope i didn't come off as rude,, this subject hhh really bothers me .. !<br>
+<br>
+<br>
+xoxo <img src="https://i.imgur.com/rJeTQUr.gif"/><br>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/AUebzYL.gif"/></center>
+
+<br><br><br>
+
 <center><img src="https://i.imgur.com/02mv4Oo.gif"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
@@ -521,99 +586,6 @@ xoxo <img src="https://i.imgur.com/Oz2Jplk.gif"/><br>
 <br>
 
 <center><img src="https://i.imgur.com/svKT8no.png"/></center>
-
-<br><br><br>
-
-
-<center><img src="https://i.imgur.com/rR5ekXW.png"/><img src="https://i.imgur.com/rR5ekXW.png"/><img src="https://i.imgur.com/rR5ekXW.png"/><img src="https://i.imgur.com/rR5ekXW.png"/></center>
-<br><br>
-<font size = 1><font color="#CBBBB1">
-<center>february . 08 . 2019</center>
-</font></font></font>
-<font size = 1><font color="#B1A69E">
-<br>
-hiii fluffies <img src="https://i.imgur.com/WBtDHoi.gif"/><br>
-so many things have happened in last weeks .. i'm a little overwhelmed, even ; ;<br>
-but i'm trying my best to rest and respect my relaxing time !!<br>
-it's always hard keeping a routine and schedules, since my body and my mind not always agree with what i'm supposed to do.. but this is also part of a healthy routine !<br>
-sometimes we need to adapt the schedule to respect our time and not get too tired.<br>
-it's actually common for me to have a full lazy day and the next day i feel super motivated to do all tasks for three days.. !<br>
-the important thing is to not pressure myself to follow the routine 100%, since it's supposed to be helpful and not a bother. if i'm doing my weekly tasks and resting properly, everything is ok !!<br>
-<br>
-so .. you may have noticed some very "drastic" changes in all my social media,,<br>
-i was already making a sort of cleaning, but this time.. i just couldn't keep doing it.<br>
-i decided to finally stop this pain and actually delete my accounts and make new ones !<br>
-i have now new accounts for my "not bad" project ; my social media accs <img src="https://i.imgur.com/PCwccpM.gif"/><br>
-i mean, only my tumblr blogs are the same, but i changed urls : now it's @pufti and @pofti, which is really cute and match ( for real now )<br>
-as you already know, i don't use social media for personal content but to post actual helpful stuff.. maybe not thaaat helpful but i always try to post things that can be inspiring, motivational or just make someone's day a little better <img src="https://i.imgur.com/7FmAlHc.gif"/><br>
-my old accounts were not really making this project work very well.. but well, i'll write more about this in the q&a !<br>
-( i already made the necessary edits in the faq and the project page )<br>
-<br>
-it took me a while to know what i should post on my new instagram acc, since i would like it to be something original and helpful ..<br>
-i was thinking of using it as a "spam" acc, but my posts ended up being more helpful than i expected,, so it ended up becoming a "self care" acc !<br>
-my posts are all stuffies and the next slides are screenshots from the "help" page of my site ( yes, thiiis one )<br>
-i always wanted these tips to reach more people, and since not everyone is used to personal websites and stuff, this was a good way for me to actually help more people !!<br>
-<br><br>
-
-<center><img width="300px" height="auto" src="https://i.imgur.com/hhL5YZt.png"/></center>
-
-</font></font></font>
-<br>
-
-<font size = 1><font color="#B1A69E">
-<br><br>
-isn't it cute ? i'm proud .. ; ;<br>
-my acc is full of friends and mutuals that i love very much.. ! many precious and sweet people. <img src="https://i.imgur.com/T6GBoM4.gif"/><br>
-i want to keep it a healthy and safe environment there. i want to motivate them to be happier and feel valid !!<br>
-<br>
-i also started doing "story games" and even a "mood calendar" to entertain everyone while helping them with self improvement !<br>
-i used the "small moments" once and the "mood calendar" for a week, but i don't think i'll continue using them myself since i'm making a new diary where i'll write things down in a more private way <img src="https://i.imgur.com/73rqGP2.gif"/><br>
-<br><br>
-
-<center><img width="300px" height="auto" src="https://i.imgur.com/QWm8Eg7.gif"/></center>
-<br><br>
-<center><img width="300px" height="auto" src="https://i.imgur.com/77Z0WH4.png"/></center>
-
-</font></font></font>
-<br>
-
-<font size = 1><font color="#B1A69E">
-<br><br>
-modesty aside, i honestly think it became much prettier than i expected ..<br>
-and i'm so happy because my aesthetic is inspiring other people !!<br>
-i always feel my heart warm when i see that people are being inspired by me ///<br>
-<br>
-today, the text will be about this renewal of my internet life !<br>
-a complement to a text i've written before, about "numbers".<br>
-<br><br>
-<center><sub><sub><img src="https://i.imgur.com/d81T42M.gif"/></sub></sub>　<b>q & a</b>　<sub><sub><img src="https://i.imgur.com/gCof63R.gif"/></sub></sub></center>
-<br><br>
-i'm little by little getting more and more clean of the "numbers", and it's making me feel really good and refreshed.. !<br>
-now i officially got rid of all of my social media with big follower numbers. yes, i did my best there, i spent time and effort posting content, but now it's time to refresh things.<br>
-i was just really tired of all of this.. random strangers following me just because of a random viral post, creeps messaging me, my accs turning to feel important and platforms treating it like nothing.. so stressful !!<br>
-i writed my reasons, and i honestly think these changes are an improvement for me and the quality of my content ♡<br>
-even if not using social media for posting personal content, it's still the best way to reach people and make friends. this is what i wanted, from the begin, and just now i'm being able to actually reach people's hearts !<br>
-the thing is,, my accs with lots of random people and artificial interactions were consuming my patience and time and i couldn't actually interact with others because it wasn't even safe to try approaching them ; people were also thinking i was distant and hard to approach. i want to have more time for healthy relationships and for myself.<br>
-now with my new accs i want to be more spontaneous and helpful to others, i want to make friends and approach people safely, i want to be able to interact with my friends and be there for everyone who needs me, i want to support people i admire and i want it to be soft !! i want my life to be softer, in general.<br>
-i'm happy to say that this is becoming reality ♡<br>
-i'm ironically being able to reach a higher number of people now than before, not with just cute stuff but my feelings too, and i believe it's because i'm doing better and being more sincere. i now can say i truly care about every single people that interact with my posts, because i can actually enter their accs and see they're trying their best too !!<br>
-this is what being "mutuals" means to me : to have our hearts connected by the same motivation and energies. even if i am not in fact "mutuals" with all my followers, i always look at their profile and check from time to time if they are active and if they are good people. i don't want ghost followers and people who never care about my content, i'm going to try to keep a proportion of followers and interactions as reasonable as possible from now on ! my large accounts always had infinitely less interactions than the number of followers, which means that obviously many of those accounts were inactive or people who didn't even care about who they're following. i don't want it anymore. i want real people, a comfortable and safe ambient for me and everyone ! the internet can be a place full of illusions. i believe the numbers are one of the most dangerous illusions.<br>
-i feel lighthearted now, and i'm being able to communicate with others better and doing what i wanted from the begin : reaching your hearts and soften your feelings !<br>
-i couldn't do it if my heart wasn't soft, right ?<br>
-i feel softer now.. i'm happy life made me see how artificial and unnecessary all these numbers are. i learned that real people are important ; kind and lovely people, who will be there. ♡<br>
-and i will be there, too ! even with the distance, i am here.<br>
-<br>
-i hope i can inspire you to improve your internet life, too..<br>
-is it really healthy and safe for you, right now ?<br>
-<br>
-<br>
-xoxo <img src="https://i.imgur.com/PinvYCN.gif"/><br>
-<br><br>
-</font></font></font>
-
-<br>
-
-<center><img src="https://i.imgur.com/rR5ekXW.png"/><img src="https://i.imgur.com/rR5ekXW.png"/><img src="https://i.imgur.com/rR5ekXW.png"/><img src="https://i.imgur.com/rR5ekXW.png"/></center>
 
 <br><br><br>
 
