--- a/archive.html
+++ b/archive.html
@@ -308,6 +308,100 @@ font-family: Verdana;">
 
 <br>
 
+<center><img src="https://i.imgur.com/rR5ekXW.png"/><img src="https://i.imgur.com/rR5ekXW.png"/><img src="https://i.imgur.com/rR5ekXW.png"/><img src="https://i.imgur.com/rR5ekXW.png"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>february . 08 . 2019</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <img src="https://i.imgur.com/WBtDHoi.gif"/><br>
+so many things have happened in last weeks .. i'm a little overwhelmed, even ; ;<br>
+but i'm trying my best to rest and respect my relaxing time !!<br>
+it's always hard keeping a routine and schedules, since my body and my mind not always agree with what i'm supposed to do.. but this is also part of a healthy routine !<br>
+sometimes we need to adapt the schedule to respect our time and not get too tired.<br>
+it's actually common for me to have a full lazy day and the next day i feel super motivated to do all tasks for three days.. !<br>
+the important thing is to not pressure myself to follow the routine 100%, since it's supposed to be helpful and not a bother. if i'm doing my weekly tasks and resting properly, everything is ok !!<br>
+<br>
+so .. you may have noticed some very "drastic" changes in all my social media,,<br>
+i was already making a sort of cleaning, but this time.. i just couldn't keep doing it.<br>
+i decided to finally stop this pain and actually delete my accounts and make new ones !<br>
+i have now new accounts for my "not bad" project ; my social media accs <img src="https://i.imgur.com/PCwccpM.gif"/><br>
+i mean, only my tumblr blogs are the same, but i changed urls : now it's @pufti and @pofti, which is really cute and match ( for real now )<br>
+as you already know, i don't use social media for personal content but to post actual helpful stuff.. maybe not thaaat helpful but i always try to post things that can be inspiring, motivational or just make someone's day a little better <img src="https://i.imgur.com/7FmAlHc.gif"/><br>
+my old accounts were not really making this project work very well.. but well, i'll write more about this in the q&a !<br>
+( i already made the necessary edits in the faq and the project page )<br>
+<br>
+it took me a while to know what i should post on my new instagram acc, since i would like it to be something original and helpful ..<br>
+i was thinking of using it as a "spam" acc, but my posts ended up being more helpful than i expected,, so it ended up becoming a "self care" acc !<br>
+my posts are all stuffies and the next slides are screenshots from the "help" page of my site ( yes, thiiis one )<br>
+i always wanted these tips to reach more people, and since not everyone is used to personal websites and stuff, this was a good way for me to actually help more people !!<br>
+<br><br>
+
+<center><img width="300px" height="auto" src="https://i.imgur.com/hhL5YZt.png"/></center>
+
+</font></font></font>
+<br>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+isn't it cute ? i'm proud .. ; ;<br>
+my acc is full of friends and mutuals that i love very much.. ! many precious and sweet people. <img src="https://i.imgur.com/T6GBoM4.gif"/><br>
+i want to keep it a healthy and safe environment there. i want to motivate them to be happier and feel valid !!<br>
+<br>
+i also started doing "story games" and even a "mood calendar" to entertain everyone while helping them with self improvement !<br>
+i used the "small moments" once and the "mood calendar" for a week, but i don't think i'll continue using them myself since i'm making a new diary where i'll write things down in a more private way <img src="https://i.imgur.com/73rqGP2.gif"/><br>
+<br><br>
+
+<center><img width="300px" height="auto" src="https://i.imgur.com/QWm8Eg7.gif"/></center>
+<br><br>
+<center><img width="300px" height="auto" src="https://i.imgur.com/77Z0WH4.png"/></center>
+
+</font></font></font>
+<br>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+modesty aside, i honestly think it became much prettier than i expected ..<br>
+and i'm so happy because my aesthetic is inspiring other people !!<br>
+i always feel my heart warm when i see that people are being inspired by me ///<br>
+<br>
+today, the text will be about this renewal of my internet life !<br>
+a complement to a text i've written before, about "numbers".<br>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/d81T42M.gif"/></sub></sub>　<b>q & a</b>　<sub><sub><img src="https://i.imgur.com/gCof63R.gif"/></sub></sub></center>
+<br><br>
+i'm little by little getting more and more clean of the "numbers", and it's making me feel really good and refreshed.. !<br>
+now i officially got rid of all of my social media with big follower numbers. yes, i did my best there, i spent time and effort posting content, but now it's time to refresh things.<br>
+i was just really tired of all of this.. random strangers following me just because of a random viral post, creeps messaging me, my accs turning to feel important and platforms treating it like nothing.. so stressful !!<br>
+i writed my reasons, and i honestly think these changes are an improvement for me and the quality of my content ♡<br>
+even if not using social media for posting personal content, it's still the best way to reach people and make friends. this is what i wanted, from the begin, and just now i'm being able to actually reach people's hearts !<br>
+the thing is,, my accs with lots of random people and artificial interactions were consuming my patience and time and i couldn't actually interact with others because it wasn't even safe to try approaching them ; people were also thinking i was distant and hard to approach. i want to have more time for healthy relationships and for myself.<br>
+now with my new accs i want to be more spontaneous and helpful to others, i want to make friends and approach people safely, i want to be able to interact with my friends and be there for everyone who needs me, i want to support people i admire and i want it to be soft !! i want my life to be softer, in general.<br>
+i'm happy to say that this is becoming reality ♡<br>
+i'm ironically being able to reach a higher number of people now than before, not with just cute stuff but my feelings too, and i believe it's because i'm doing better and being more sincere. i now can say i truly care about every single people that interact with my posts, because i can actually enter their accs and see they're trying their best too !!<br>
+this is what being "mutuals" means to me : to have our hearts connected by the same motivation and energies. even if i am not in fact "mutuals" with all my followers, i always look at their profile and check from time to time if they are active and if they are good people. i don't want ghost followers and people who never care about my content, i'm going to try to keep a proportion of followers and interactions as reasonable as possible from now on ! my large accounts always had infinitely less interactions than the number of followers, which means that obviously many of those accounts were inactive or people who didn't even care about who they're following. i don't want it anymore. i want real people, a comfortable and safe ambient for me and everyone ! the internet can be a place full of illusions. i believe the numbers are one of the most dangerous illusions.<br>
+i feel lighthearted now, and i'm being able to communicate with others better and doing what i wanted from the begin : reaching your hearts and soften your feelings !<br>
+i couldn't do it if my heart wasn't soft, right ?<br>
+i feel softer now.. i'm happy life made me see how artificial and unnecessary all these numbers are. i learned that real people are important ; kind and lovely people, who will be there. ♡<br>
+and i will be there, too ! even with the distance, i am here.<br>
+<br>
+i hope i can inspire you to improve your internet life, too..<br>
+is it really healthy and safe for you, right now ?<br>
+<br>
+<br>
+xoxo <img src="https://i.imgur.com/PinvYCN.gif"/><br>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/rR5ekXW.png"/><img src="https://i.imgur.com/rR5ekXW.png"/><img src="https://i.imgur.com/rR5ekXW.png"/><img src="https://i.imgur.com/rR5ekXW.png"/></center>
+
+<br><br><br>
+
+<br>
+
 <center><img width="200px" height="auto" src="https://i.imgur.com/1ZLDltw.png"/><img width="200px" height="auto" src="https://i.imgur.com/1ZLDltw.png"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
