--- a/status.html
+++ b/status.html
@@ -326,6 +326,9 @@ z-index: 3;
 <div style="padding-left: 163px; padding-top: 130px;">
 <div style="padding: 2px; position: absolute; font-family: Verdana; font-size:10px; width: 270px; height: 120px; overflow-x: hidden; z-index: 30; text-align:justify; line-height: 100%">
 
+　<sub><img src="https://i.imgur.com/9LP84Nr.gif"></sub> <font color="#b7cccc" style="border-bottom:1px dashed #d8c0ad;"><sup>08.06.19</sup></font> <font color="#9cb7b7">→</font>　it's never too late for restarting..
+
+<br><br><br>
 　<sub><img src="https://i.imgur.com/YQRQHJd.gif"></sub> <font color="#f2c6c6" style="border-bottom:1px dashed #d8c0ad;"><sup>27.05.19</sup></font> <font color="#d8abab">→</font>　sometimes existing is enough
 
 <br><br><br>
@@ -352,8 +355,6 @@ z-index: 3;
 <br><br><br>
 　<sub><img src="https://i.imgur.com/UvUc3xP.gif"></sub> <font color="#c9d5e5" style="border-bottom:1px dashed #d8c0ad;"><sup>12.20.18</sup></font> <font color="#a0acbc">→</font>　a very merry xmas *.(๓´͈ ˘ `͈๓).*﻿
 
-<br><br><br>
-　<sub><img src="https://i.imgur.com/9LP84Nr.gif"></sub> <font color="#b7cccc" style="border-bottom:1px dashed #d8c0ad;"><sup>12.06.18</sup></font> <font color="#9cb7b7">→</font>　i have a terrible fever ;///;
 
 
 </div>
