--- a/tinyjournal.html
+++ b/tinyjournal.html
@@ -316,6 +316,31 @@ welcome to the place where imagination and reality are mixed together !! i hope 
 <br><br>
 
 <div style="text-align:left">
+<center><font color="#b79e96">
+<img src="https://i.imgur.com/B0R9I5n.png"><br><br>
+june . 14 . 2019<br>
+✄ safe as a ghost
+</font>
+</center>
+<font color="#c9bcb1">
+<br><br>
+
+　　where i live, everyone i know has gone through bad and dangerous stuff in the streets.<br>
+　　i always wanted to have some ghost qualities to avoid being noticed by people, to avoid problems and dangers. people can be really scary.<br>
+　　invisible, inaudible. always doing all things carefully, softly, gently. delicate steps, music boxes, wind chimes.<br>
+　　i got used to avoid being seen when i open the windows at sunrise and close them at sunset. i take care of my plants and animals in the backyard, where they can't see me.<br>
+　　i got used to leaving home only if accompanied. unfortunately i am not invisible in the streets, but i try my best to be discreet, modest and polite. people in town doubt my existence, but they don't bother with me. there's nothing to worry about. just a well-mannered girl, maybe too busy, maybe just visiting.<br>
+　　it can be tiring, but it needs to be done. i've never been through any dangerous experience on the streets, because no one can hurt a ghost.
+<br><br>
+</font>
+
+
+
+<br><br><br>
+<center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
+<br><br><br>
+
+<div style="text-align:left">
 <center><font color="#ba9187">
 <img src="https://i.imgur.com/TkaVrz0.png"><br><br>
 february . 10 . 2019<br>
@@ -430,42 +455,6 @@ september . 13 . 2018<br>
 </font>
 
 
-
-<br><br><br>
-<center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
-<br><br><br>
-
-
-<div style="text-align:left">
-<center><font color="#B5A3A3">
-<center><font color="#ba9187">
-<img src="https://i.imgur.com/TkaVrz0.png"><br><br>
-june . 27 . 2018<br>
-✄ warm cheeks
-</font>
-</center>
-<font color="#C2B1B1">
-<br><br>
-
-　　sometimes life is heavy to deal with<br>
-　　　　　　　　　it's hard, it's painful<br>
-　　my soft heart overflows love and it makes me cry<br>
-　　　　　　　　　i cry until i sleep<br>
-　　when i wake up<br>
-　　with tired eyes and blurred vision<br>
-　　i close the window, because it's already dusk<br>
-　　　　　　　　　the sky is lilac and soft blue<br>
-　　　　　　　　　all things look rosy<br>
-　　　　　　　　　the weather is perfect<br>
-　　　　　　　　　　　　　　i feel a warm,<br>
-　　　　　　　　　　　　　　soft breeze on my face<br>
-　　　　　　　　　　　　　　when my cheeks become warm<br>
-　　　　　　　　　and my heart beats faster<br>
-　　life is worth it.
-<br><br>
-</font>
-
-</div>
 
 <br><br><br>
 <center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
