--- a/commissions.html
+++ b/commissions.html
@@ -378,11 +378,14 @@ the index page and 404 page are for free. i'll also provide you a blank page in 
 initially i'll make the index an example page for you with some cute graphics and codes i am going to provide !<br>
 all the text will be edited later on, as you wish.<br>
 <br><br>
+<style>
+#mm { color: #aa998c; }
+</style>
 <font color="#e2c993" style="font-size:9px">♡</font>　are you interested ? please contact me through the <a id="linkzinho" href="/contact"><font color="#b7a596">contact form</font></a> or :<br><br>
-　　<font color="#bfa57a" style="font-size:10px">discord :</font> @ puf#0008<br>
-　　<font color="#bfa57a" style="font-size:10px">tumblr :</font> @ pufti<br>
-　　<font color="#bfa57a" style="font-size:10px">twitter :</font> @ sofffti<br>
-　　<font color="#bfa57a" style="font-size:10px">instagram :</font> @ soffftie<br>
+　　<font color="#bfa57a" style="font-size:10px">discord :</font> <a id="mm" href="https://discord.gg/Wq5NhFm" target="_blank" >@puf#0008</a><br>
+　　<font color="#bfa57a" style="font-size:10px">tumblr :</font> <a id="mm" href="https://www.tumblr.com/blog/pufti" target="_blank" >@pufti</a><br>
+　　<font color="#bfa57a" style="font-size:10px">twitter :</font> <a id="mm" href="https://twitter.com/sofffti" target="_blank" >@sofffti</a><br>
+　　<font color="#bfa57a" style="font-size:10px">instagram :</font> <a id="mm" href="https://www.instagram.com/soffftie" target="_blank" >@soffftie</a><br>
 
 <br>
 
