--- a/faq.html
+++ b/faq.html
@@ -1514,13 +1514,11 @@ pretty much boring, but i wasn't very good with fashion until my 16 at least. i 
 <br>
 at the moment, i take inspirations from :<br>
 <br>
-✄ <b>larme kei</b> ( lots of handmade clothes, but i love rose marie seoir and axes femme )<br>
-✄ <b>mori girl</b> ( on fall and winter i do wear it a loooooot, so cozy and comfy, lots of handmade clothes too )<br>
-✄ <b>cult party</b> ( i have a few coords that I LOVE but i don't wear it a lot, the fabric is just so delicate ; ; )<br>
-✄ <b>lolita</b> ( i don't have any coord yet so it's basically à la mode. my dream is to wear classical-sweet, it's hard to wear on non-special occasions, but i think i can adapt to casual. i'm studying this style for YEARS i love it )<br>
-✄ <b>himekaji</b> ( basicaly because of liz lisa, cliché, i know )<br>
-<br>
-✁ & in everyday situations i'm inspired by that soft and clean aesthetic clothes ( not very creative but it's cute ) ✃<br>
+✄ <b>larme</b> ( basically all of my handmade clothes ! rose marie seoir & axes femme are my main inspirations )<br>
+✄ <b>mori</b> ( perfect for autumn and winter, i personally love to combine earthy tones with washed out pastel colors )<br>
+✄ <b>cult party</b> ( lots of lace and delicate fabric with washed out pink, i love it so much )<br>
+✄ <b>lolita</b> ( i don't have any coord yet so it's basically à la mode. classical-sweet is my fav substyle & angelic pretty is my fav brand )<br>
+✄ <b>himekaji</b> ( i love delicate floral + lace .. liz lisa is my ult inspiration )<br>
 <br>
 so, i know lolita since i was 13 and i study lolita since i was 16. but why i don't use it YET ?<br>
 i sincerely think that at this point i know how to coordinate, i don't think lolita is too hard, it just have many rules and you need a lot of study, help and research. as i said, i have been studying for many years, so i think i'm okay with lolita to make a good first outfit now.<br>
