--- a/commissions.html
+++ b/commissions.html
@@ -55,9 +55,7 @@ background-color: #f9f0ed;
 border: 1px dotted #e2d5d0;
 }
 #linkbjinho { color: #bca7a7; padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
-#linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
-
-</style>
+#linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }</style>
 
 <!--
 tooooooooltip
@@ -272,9 +270,7 @@ z-index: 3;
 <img src="https://i.imgur.com/Jm86w3I.png"/>
 
 <div onselectstart="return false" id="menu1">
-<p style="font-size:10px;line-height:50%;"><br><br>
-
-　　　　<font color="#c6a799">ణ</font>　<a href="/about" style="text-decoration: none; color:#a3948d;">about</a><br><br><br>
+<p style="font-size:10px;line-height:50%;"><br><br>　　　　<font color="#c6a799">ణ</font>　<a href="/about" style="text-decoration: none; color:#a3948d;">about</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/links" style="text-decoration: none; color:#a3948d;">links</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/contact" style="text-decoration: none; color:#a3948d;">contact</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/credits" style="text-decoration: none; color:#a3948d;">credits</a><br><br><br>
@@ -369,8 +365,8 @@ these are just some collage examples of the aesthetics i'm used to. my website r
 <font color="#bfa57a" style="font-size:10px">
 <sub><sub><img src="https://i.imgur.com/lpRUV0t.gif"/></sub></sub>　　pricing :<br><br>
 </font><font color="#aa998c" style="font-size:10px">
-　<font color="#e2c993" style="font-size:10px">layout :</font>　$ 30 american dollars<br><br>
-　<font color="#e2c993" style="font-size:10px">each page :</font>　$ 5 american dollars<br><br>
+　<font color="#e2c993" style="font-size:10px">layout :</font>　$ 30 dollars<br><br>
+　<font color="#e2c993" style="font-size:10px">each page :</font>　$ 5 dollars<br><br>
 
 　payment must be made through paypal ( middlepot@gmail.com ) or <a id="linkzinho" href="https://ko-fi.com/middlepot" target="_blank"><font color="#b7a596">ko-fi</font></a>.
 <br><br>
