--- a/fashion.html
+++ b/fashion.html
@@ -325,7 +325,7 @@ p { margin: 0; }
 
 <div style="font-family: Verdana; font-size:8px;"><font color="#B49797">
 <br><br><br>
-<sub><img width="12px" height="auto" src="https://i.imgur.com/tJrZd34.gif"></sub>　<a href="https://photos.app.goo.gl/oWy7JPtFreqkjtVv2"target="_blank"><font color="#a59990" style="font-size:6px;">archive</font></a>　<sub><img width="12px" height="auto" src="https://i.imgur.com/tJrZd34.gif"></sub>
+<sub><img width="12px" height="auto" src="https://i.imgur.com/tJrZd34.gif"></sub>　<a href="https://photos.app.goo.gl/otCymAX8NN6E6YTm6"target="_blank"><font color="#a59990" style="font-size:6px;">archive</font></a>　<sub><img width="12px" height="auto" src="https://i.imgur.com/tJrZd34.gif"></sub>
 <br>
 
 
