--- a/tinyjournal.html
+++ b/tinyjournal.html
@@ -309,7 +309,7 @@ welcome to the place where imagination and reality are mixed together !! i hope 
 </font>
 <br><br>
 
-<center><sub><img width="12px" height="auto" src="https://i.imgur.com/tJrZd34.gif"></sub>　<a href="https://photos.app.goo.gl/jtr5rqe0kge2UYs53"target="_blank"><font color="#a59990" style="font-size:6px;">archive</font></a>　<sub><img width="12px" height="auto" src="https://i.imgur.com/tJrZd34.gif"></sub>
+<center><sub><img width="12px" height="auto" src="https://i.imgur.com/tJrZd34.gif"></sub>　<a href="https://photos.app.goo.gl/PWV17EXytQTcTKBB6"target="_blank"><font color="#a59990" style="font-size:6px;">archive</font></a>　<sub><img width="12px" height="auto" src="https://i.imgur.com/tJrZd34.gif"></sub>
 
 </center>
 
