--- a/status.html
+++ b/status.html
@@ -318,7 +318,7 @@ z-index: 3;
 <div style="font-family: Verdana; font-size:10px; overflow-y: hidden; position: absolute; width: 150px;height: 100px;overflow-x: hidden; padding-left: 165px; padding-top: 248px; z-index: 20;"><br><br>
 <img src="https://i.imgur.com/BMoFm81.gif">　<font color="#a59990" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 3px;">feeling : </font><font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 3px;">cozy</font> <img src="https://i.imgur.com/8SYzw4z.gif">
 <br><br><br>
-　　　　　<sub><img width="12px" height="auto" src="https://i.imgur.com/tJrZd34.gif"></sub>　<a href="https://photos.app.goo.gl/iLTeYQh8XpPmmA6Q2"target="_blank"><font color="#a59990" style="font-size:6px;">archive</font></a>　<sub><img width="12px" height="auto" src="https://i.imgur.com/tJrZd34.gif"></sub>
+　　　　　<sub><img width="12px" height="auto" src="https://i.imgur.com/tJrZd34.gif"></sub>　<a href="https://photos.app.goo.gl/ncZFpWGgfJPjZUHH7"target="_blank"><font color="#a59990" style="font-size:6px;">archive</font></a>　<sub><img width="12px" height="auto" src="https://i.imgur.com/tJrZd34.gif"></sub>
 </div>
 
 
