--- a/gaming.html
+++ b/gaming.html
@@ -487,13 +487,13 @@ p { margin: 0; }
 
 <br>
 　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none;" href="https://goo.gl/photos/2QzjzJA7J6fzY3Zy6" target="_blank">
+<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/gog4pQiboYYQTjCW8" target="_blank">
 <font color="#af8c8c">my regular pets</font></a><font color="#d6bebe"> | </font>
-<a id="linkbjinho" style="text-decoration:none;" href="https://goo.gl/photos/pGqQnTrCvG9m15Yi9" target="_blank">
+<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/AZdiLUAmimLCMqJDA" target="_blank">
 <font color="#af8c8c">my hocus pocus pets</font></a><font color="#d6bebe"> | </font>
-<a id="linkbjinho" style="text-decoration:none;" href="https://goo.gl/photos/3XUgrebx7VHMXcFy9" target="_blank">
+<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/SVpWWRLDQvfuhhmf7" target="_blank">
 <font color="#af8c8c">my homunculus</font></a><font color="#d6bebe"> | </font>
-<a id="linkbjinho" style="text-decoration:none;" href="https://goo.gl/photos/3BRzFQ2uEzR8q5Wu5" target="_blank">
+<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/erzCQrv7ZaKeC9LW9" target="_blank">
 <font color="#af8c8c">my elemental spirits</font></a>
 
 <br><br><br><br>
@@ -552,7 +552,7 @@ p { margin: 0; }
 
 <br>
 　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none;" href="https://goo.gl/photos/hEWKUiixZFTDVEjm9" target="_blank">
+<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/yDq5FNC2jphwEtwY8" target="_blank">
 <font color="#af8c8c">more images</font></a>
 
 <br><br><br><br>
@@ -611,7 +611,7 @@ p { margin: 0; }
 
 <br>
 　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none;" href="https://goo.gl/photos/wYNb5uykMBGrwuJm9" target="_blank">
+<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/kzP7QwkmfLq9cXRL7" target="_blank">
 <font color="#af8c8c">more images</font></a>
 
 <br><br><br><br>
@@ -619,7 +619,7 @@ p { margin: 0; }
 <sub><sub><img width="28px" height="auto" src="https://i.imgur.com/nX9OFvm.gif"></sub></sub>
 <font color="#a37a7a">　<b>love live</b>　<font style="font-size:9px">♡</font></font><br><br>
 　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/7Dd6mMW7EMTsihFk7" target="_blank">
+<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/4AttnWZ6Vq5EJ3dm9" target="_blank">
 <font color="#af8c8c">my fav ur</font></a>
 
 <br><br><br><br>
@@ -678,7 +678,7 @@ p { margin: 0; }
 
 <br>
 　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/NfgqqgVzFLFsQdQe8" target="_blank">
+<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/VBLPuPdBfTRWDKJUA" target="_blank">
 <font color="#af8c8c">more images</font></a>
 
 <br><br><br><br>
@@ -738,7 +738,7 @@ p { margin: 0; }
 
 <br>
 　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/nKoAmelMxYC7HxbA3" target="_blank">
+<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/p7gi3FZYu4iJ7eD47" target="_blank">
 <font color="#af8c8c">more images</font></a>
 
 <br><br><br><br>
@@ -756,9 +756,9 @@ p { margin: 0; }
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <br>
 <img width="300px" height="auto" src="https://i.imgur.com/Fzw1Ri0.png"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/7QBjASG.png"/><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/wz7QoAa.png"/><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/aVH7nPG.png"/><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/QKn7rAu.png"/><br><br>
 <br><br>
 </div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <style>
@@ -800,7 +800,7 @@ p { margin: 0; }
 
 <br>
 　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/GvayxZzaxvKMqJV18" target="_blank">
+<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/FBd6hcys6rzC8uDW9" target="_blank">
 <font color="#af8c8c">more images</font></a>
 
 <br><br><br><br>
@@ -974,7 +974,7 @@ p { margin: 0; }
 
 <br>
 　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/2pBUwbQP5odtRsm39" target="_blank">
+<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/cMsEdzEqvxQLhkpf6" target="_blank">
 <font color="#af8c8c">more images</font></a>
 
 <br><br><br><br>
@@ -1035,7 +1035,7 @@ p { margin: 0; }
 
 <br>
 　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/2RQe6UpMg7JVNzdv9" target="_blank">
+<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/hKZCCi6eWSWcKQcTA" target="_blank">
 <font color="#af8c8c">more images</font></a>
 
 <br><br><br><br>
@@ -1095,7 +1095,7 @@ p { margin: 0; }
 
 <br>
 　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none;" href="https://goo.gl/photos/kmx3Lt541oZTuidQA" target="_blank">
+<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/dJEpyeR85yZQnsNU7" target="_blank">
 <font color="#af8c8c">more images</font></a>
 
 <br><br><br><br>
@@ -1104,7 +1104,7 @@ p { margin: 0; }
 <sub><sub><img width="28px" height="auto" src="https://i.imgur.com/nX9OFvm.gif"></sub></sub>
 <font color="#a37a7a">　<b>hidden world</b>　<font style="font-size:9px">♡</font></font><br><br>
 　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/yPabDPg8fmKsNxSM9" target="_blank">
+<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/NUbsku4uWDn5Yw937" target="_blank">
 <font color="#af8c8c">my village</font></a>
 
 <br><br><br><br>
@@ -1218,7 +1218,7 @@ p { margin: 0; }
 
 <br>
 　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/SfYfnmVhryAn32ky5" target="_blank">
+<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/ZmaqPki1cPpeRmAB8" target="_blank">
 <font color="#af8c8c">more images</font></a>
 
 <br><br><br><br>
@@ -1280,7 +1280,7 @@ p { margin: 0; }
 <sub><sub><img width="28px" height="auto" src="https://i.imgur.com/nX9OFvm.gif"></sub></sub>
 <font color="#a37a7a">　<b>momo's dressup</b>　<font style="font-size:9px">♡</font></font><br><br>
 　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/Fgn4RbAYw1nx7tXY9" target="_blank">
+<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/vpa6Zdqu7zERLyQh7" target="_blank">
 <font color="#af8c8c">me</font></a>
 
 <br><br><br><br>
@@ -1288,7 +1288,7 @@ p { margin: 0; }
 <sub><sub><img width="28px" height="auto" src="https://i.imgur.com/nX9OFvm.gif"></sub></sub>
 <font color="#a37a7a">　<b>my little star</b>　<font style="font-size:9px">♡</font></font><br><br>
 　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/tRHizx6oNgZEFwSr9" target="_blank">
+<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/ZHW9oFpf7kLiYhLv5" target="_blank">
 <font color="#af8c8c">me</font></a>
 
 <br><br><br><br>
@@ -1347,7 +1347,7 @@ p { margin: 0; }
 
 <br>
 　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/bjsTacqF8krw5Wdj8" target="_blank">
+<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/kD5agC7S9mQVHK8x9" target="_blank">
 <font color="#af8c8c">more images</font></a>
 
 <br><br><br><br>
@@ -1462,7 +1462,7 @@ p { margin: 0; }
 
 <br>
 　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/3msaJBsvQ4BGVdxj7" target="_blank">
+<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/ZTwjQQJe8CSDx1d66" target="_blank">
 <font color="#af8c8c">more images</font></a>
 
 <br><br><br><br>
